<resources>
    <string name="app_name">TODO</string>
    <string name="your_boards">Your Boards</string>
    <string name="members">members</string>
    <string name="new_board">New board</string>
    <string name="new_list">New list</string>
    <string name="new_card">New card</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_description">Enter description</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirmDelete">Are you sure want to delete</string>
    <string name="empty_field">Please enter a name!</string>
    <string name="edit_board">Edit board</string>
    <string name="edit_list">Edit list</string>
    <string name="edit_card">Edit card</string>
    <string name="add_success">Add successfully!</string>
    <string name="edit_success">Edit successfully!</string>
    <string name="deleted">Deleted!</string>
    <string name="errorGET">GET Error!</string>
    <string name="errorPOST">POST Error!</string>
    <string name="errorServe">Can not connect to server!</string>
    <string name="add_card">Add card</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="to_board">To board</string>
    <string name="to_list">To list</string>
    <string name="description">Description:</string>
    <string name="time">Time:</string>
    <string name="list">List</string>
    <string name="board">Board</string>
    <string name="card">Card</string>
    <string name="set_location">Set location</string>
    <string name="no_description">No description</string>
    <string name="no_time">Not set</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="set_time">Set time</string>
    <string name="at">at</string>
    <string name="complete_time">Please complete the form or leave it blank!</string>
    <string name="set_time_success">Set time successfully!</string>
    <string name="set_location_success">Set location successfully!</string>
    <string name="expired">Expired!</string>
    <string name="please_set_time">Please set time to alarm!</string>
    <string name="log_in_failed">You are not logged in!</string>
    <string name="registed">Your account was created!</string>
    <string name="alarm_on">Alarm: ON</string>
    <string name="alarm_off">Alarm: OFF</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_out">Log out</string>
    <string name="your_info">Your information</string>
    <string name="user_name">Name</string>
    <string name="email">Account</string>
    <string name="close">Close</string>
    <string name="please">Please</string>
    <string name="to_continue">to continue!</string>
    <string name="add_member">Add member</string>
    <string name="find_email">Find by email</string>
    <string name="empty_email">Please enter an email to add!</string>
    <string name="not_found_email">Not found user with email</string>
    <string name="member_existed">This user has already in this board</string>
    <string name="assign">Assign to...</string>
    <string name="assigned">Assigned to:</string>
    <string name="detail">Detail:</string>
    <string name="choose_location">Choose location</string>
    <string name="google_api">AIzaSyC5BvEGTkCP7vIfQF8Olkg_OV_7obw_Coo</string>
    <string name="no_location">No location selected</string>
    <string name="latitude">Lat:</string>
    <string name="longitude">Lng:</string>
    <string name="location">Location:</string>
    <string name="not_set">Not set</string>
    <string name="title_activity_maps">Map</string>
    <string name="destination">Destination</string>
    <string name="title_location_permission">This app need location permission</string>
    <string name="text_location_permission">This app need location permission</string>
    <string name="notification_content">Touch to view details!</string>
    <string name="load_local">Local data loaded</string>
    <string name="please_refresh">Log in failed! Please refresh</string>
    <string name="confirm_logout">Are you sure want to LOG OUT?</string>
    <string name="sync">Sync</string>
    <string name="no_one">No one left :))</string>
    <string name="choose_no_one">No one chosen</string>
    <string name="assign_success">Assign successfully!</string>
    <string name="not_owner">You are not owner of this board!</string>
    <string name="removed">Removed!</string>
    <string name="empty">Empty</string>
    <string name="moved">Moved</string>
    <string name="facebook_app_id">238902473343487</string>
    <string name="notice_member">Notice all members</string>
    <string name="updated">TODO: Your data was updated</string>
</resources>
