<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/dialogBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSetTime"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/set_time"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="2"
            android:id="@+id/edtSetDate"
            android:layout_marginTop="5dp"
            android:hint="@string/date_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"/>

        <EditText
            android:layout_weight="2"
            android:id="@+id/edtSetTime"
            android:layout_marginTop="5dp"
            android:hint="@string/time_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="time"/>

        <ImageButton
            android:layout_weight="3"
            android:background="@drawable/button_background"
            android:id="@+id/btClearTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/clear"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btSetTimeCancel"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/cancel"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btSetTimeOk"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/ok"/>

    </LinearLayout>

</LinearLayout>